# QSDLPP-GUI-Library-Project

./: .gitignore  CMakeLists.txt  README.MD  TODO.MD  main.cpp
QSDL++/: Application  Common  Event  RUIComponent  Thread  UIComponent  Window
QSDL++/UIComponents/: Button  Canvas  CheckBox  Frame  Label  RadioButton  RadioGroup  TextInput
backup/: window.cpp.bkp
docs/: README.MD
examples/: README.MD  example.cpp
headers/: application.hpp  common.hpp  event.hpp  reluicomp.hpp  thread.hpp  uicomponent.hpp  window.hpp
headers/UIComponents/: button.hpp  canvas.hpp  checkbox.hpp  frame.hpp  label.hpp  radiobutton.hpp  radiogroup.hpp  textinput.hpp
project-plan/: .$project-sheet.drawio.bkp  project-sheet.drawio
src/: application.cpp  common.cpp  event.cpp  reluicomp.cpp  ruicomponent.cpp  thread.cpp  uicomponent.cpp  window.cpp
src/UIComponents/: button.cpp  canvas.cpp  checkbox.cpp  frame.cpp  label.cpp  radiobutton.cpp  radiogroup.cpp  textinput.cpp
test/: CMakeLists.txt  test.cpp
